# lacuna

./: README.md  pyproject.toml
data/: sblgnt_processed.txt
lacuna/: lacuna.py  utils.py
script/: sblgnt_to_uc.py  tei_to_uc.py
