[tool.poetry]
name = "lacuna"
version = "0.1.0"
description = "Fill your gaps with Lacuna"
authors = ["Will Fitzgerald <willf@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nltk = "^3.8.1"
transformers = "^4.37.2"
torch = "^2.2.0"
betacode = "^1.0"
pygtrie = "^2.5.0"
greek-utils = "^0.2"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
pytest = "^8.0.0"
isort = "^5.13.2"
coverage = "^7.4.1"
ipython = "^8.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
